# SDF-Contact-Theory

./: .gitignore  Agents.md  README.md  pyproject.toml  requirements.txt
scripts/: compare_backends.py  mesh_counts.py  render_dynamics_outputs.py  run_all.py  run_dynamics.py
sdf_contact/: __init__.py
sdf_contact/contact/: __init__.py  force.py  region.py
sdf_contact/dynamics/: __init__.py  force_evaluator.py  integrator.py  quaternion.py  runner.py  scenarios.py  visualization.py
sdf_contact/experiments/: __init__.py  cases.py  runner.py
sdf_contact/geometry/: __init__.py  analytic_meshes.py  mesh.py  quality.py
sdf_contact/sdf/: __init__.py  analytic.py  grid.py  interpolation.py  mesh_to_sdf.py  mesh_to_sdf_cpu.py  mesh_to_sdf_cupy.py  mesh_to_sdf_warp.py
sdf_contact/validation/: __init__.py  metrics.py
sdf_contact/visualization/: __init__.py  plots.py  report.py
tests/: test_dynamics_freefall.py  test_mesh_counts.py  test_sdf_sampling.py
